gate/gate-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gate
  labels:
    app: gate
    kubernetes.io/name: "gate"
spec:
  selector:
    app: gate
  ports:
  - name: gate
    port: 80
