gate/gate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gate
spec:
  rules:
  - host: gate.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gate
          servicePort: 80
      - path: /.well-known
        backend:
          serviceName: letsencrypt
          servicePort: 80
